2007-05-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/util.js: Use jQuery.extend here too.

2007-05-30  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/start.js: initialize our workarea.

	* compzilla/chrome/content/minimize.js: reuse this file to hold
	RestoreCompzillaFrame and MaximizeCompzillaFrame.

	* compzilla/chrome/content/start.xul: use the maximize button as a
	toggle.  Also set the initial window-state to normal.

	* compzilla/chrome/content/frame.js: implement state switching
	(maximize,minimize,fullscreen,normal) and restoring to normal from
	the others.  also, realy fix that typo in parameter names to
	clientMessageRecv.

	* compzilla/chrome/content/workarea.js: make this so it doesn't
	crash on startup.

2007-05-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaRenderingContext.cpp (Redraw): Fallback
	to 15.0 twips if nsPresContext::PixelsToTwips returns 0.  I have
	no idea why this happens, but it does.

2007-05-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/start.xul: Make cmd_minimizeWindow call
	_focusedFrame.minimize().

	* compzilla/chrome/content/frame.js: Fix hide() by setting
	style.display="none".

2007-05-30  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/overlay.js: use $().

	* compzilla/chrome/content/debug.js: use $().

	* compzilla/chrome/content/frame.js: use $() instead of both
	document.getElementById and getDescendentById.  also, use
	jquery.Extend instead of the loop that adds methods.

	* compzilla/chrome/content/content.js: use $(), and jquery's clone
	method, and use jQuery.extend instead of the loop adding methods.
	Also remove the c&p extra field in _NET_WM_ICON_GEOMETRY's value.

	* compzilla/chrome/content/start.js: fix typo with
	DeleteRootWindowProperty method name, and use $().

	* compzilla/chrome/content/frame.js: get rid of getElementById

	* compzilla/chrome/content/windowStack.js: change the sense of