@@ -1,3 +1,11 @@
+2007-05-31  Alex Graveley  <alex@beatniksoftware.com>
+
+	* compzilla/chrome/skin/compzilla.css: Hide side/bottom frame
+	borders for maximized windows.
+
+	* compzilla/chrome/content/start.xul: Add uiDlgBorderLeft/Right
+	helper classes to border divs, to simplify the css rules.
+
 2007-05-30  Alex Graveley  <alex@beatniksoftware.com>
 
 	* compzilla/chrome/content/util.js: Use jQuery.extend here too.
